Set up for computationalphysics computer

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -10,76 +10,8 @@
      "output_type": "stream",
      "text": [
       "fits_dir exists\n",
-      "image_dir exists\n",
-      "2000\n",
-      "https://data.sdss.org/sas/dr14/apogee/spectro/redux/r8/stars/apo25m/2000/apStar-r8-2M17101587+3415217-57169.fits\n",
-      "2095\n",
-      "https://data.sdss.org/sas/dr14/apogee/spectro/redux/r8/stars/apo25m/2095/apStarLSF-r8-2M03451505+0012399.fits\n",
-      "2190\n",
-      "DNE: 404\n",
-      "2285\n",
-      "https://data.sdss.org/sas/dr14/apogee/spectro/redux/r8/stars/apo25m/2285/apStar-r8-2M07492900+5023111.fits\n",
-      "2380\n",
-      "https://data.sdss.org/sas/dr14/apogee/spectro/redux/r8/stars/apo25m/2380/apStar-r8-2M16313252+2626003-57513.fits\n",
-      "2475\n",
-      "DNE: 404\n",
-      "2570\n",
-      "DNE: 404\n",
-      "2665\n",
-      "DNE: 404\n",
-      "2760\n",
-      "DNE: 404\n",
-      "2855\n",
-      "DNE: 404\n",
-      "2950\n",
-      "DNE: 404\n",
-      "3045\n",
-      "DNE: 404\n",
-      "3140\n",
-      "DNE: 404\n",
-      "3235\n",
-      "DNE: 404\n",
-      "3330\n",
-      "DNE: 404\n",
-      "3425\n",
-      "DNE: 404\n",
-      "3520\n",
-      "DNE: 404\n",
-      "3615\n",
-      "DNE: 404\n",
-      "3710\n",
-      "DNE: 404\n",
-      "3805\n",
-      "DNE: 404\n",
-      "3900\n",
-      "DNE: 404\n",
-      "3995\n",
-      "DNE: 404\n",
-      "4090\n",
-      "DNE: 404\n",
-      "4185\n",
-      "DNE: 404\n",
-      "4280\n",
-      "https://data.sdss.org/sas/dr14/apogee/spectro/redux/r8/stars/apo25m/4280/apStarLSF-r8-2M18394668-0746132.fits\n",
-      "4375\n",
-      "https://data.sdss.org/sas/dr14/apogee/spectro/redux/r8/stars/apo25m/4375/apStar-r8-2M18281504-1631170-56812.fits\n",
-      "4470\n",
-      "https://data.sdss.org/sas/dr14/apogee/spectro/redux/r8/stars/apo25m/4470/apStarLSF-r8-2M18520596-0808447.fits\n",
-      "4565\n",
-      "https://data.sdss.org/sas/dr14/apogee/spectro/redux/r8/stars/apo25m/4565/apStar-r8-2M06155217+2447549.fits\n",
-      "4660\n",
-      "DNE: 404\n",
-      "4755\n",
-      "DNE: 404\n",
-      "4850\n",
-      "DNE: 404\n",
-      "4945\n",
-      "DNE: 404\n",
-      "5040\n",
-      "https://data.sdss.org/sas/dr14/apogee/spectro/redux/r8/stars/apo25m/5040/apStar-r8-2M22440999+4512526.fits\n",
-      "5135\n",
-      "https://data.sdss.org/sas/dr14/apogee/spectro/redux/r8/stars/apo25m/5135/apStarLSF-r8-2M00493839-1307220-57377.fits\n",
-      "11\n"
+      "['2000_373.fits', '2095_996.fits', '2285_202.fits', '2380_467.fits', '4280_1276.fits', '4375_383.fits', '4470_890.fits', '4565_150.fits', '5040_592.fits', '5135_879.fits']\n",
+      "10\n"
      ]
     }
    ],
@@ -95,8 +27,10 @@
     "\n",
     "\n",
     "url = 'https://data.sdss.org/sas/dr14/apogee/spectro/redux/r8/stars/apo25m/' #APOGEE stars\n",
-    "fits_dir = '/Users/TheBestKid/Desktop/Hubble/fits/' #Where the fits files go\n",
-    "image_dir = '/Users/TheBestKid/Desktop/Hubble/images'\n",
+    "#base_dir = '/Users/ThebestKid/Desktop/Hubble/'\n",
+    "base_dir = '/Users/computationalphysics/Desktop/LiamKeeley/hubble/'\n",
+    "fits_dir = base_dir + 'fits/' #Where the fits files go\n",
+    "image_dir = base_dir + 'images'\n",
     "\n",
     "try:\n",
     "    os.mkdir(fits_dir)\n",
@@ -121,7 +55,7 @@
     "\n",
     "    #get the .fits file\n",
     "    req = requests.get(file_url)\n",
-    "    path = '/Users/TheBestKid/Desktop/Hubble/fits/' + str(i) + '_' + str(rand) + '.fits'\n",
+    "    path = fits_dir + str(i) + '_' + str(rand) + '.fits'\n",
     "\n",
     "    #write binary to local file\n",
     "    with open(path, 'wb+') as file:\n",
@@ -140,72 +74,69 @@
     "        else:\n",
     "            get_fits(view)\n",
     "else:\n",
-    "    print(os.listdir('/Users/TheBestKid/Desktop/Hubble/fits/'))\n",
+    "    print(os.listdir(fits_dir))\n",
     "    \n",
     "    \n",
-    "print(len(os.listdir('/Users/TheBestKid/Desktop/Hubble/fits/')))\n",
+    "print(len(os.listdir(fits_dir)))\n",
     "    #https://dr15.sdss.org/sas/dr15/eboss/spectro/redux/v5_10_0/spectra/3699/spec-3699-55517-0003.fits\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 12,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<i>Table length=1</i>\n",
-       "<table id=\"table4776877304\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>FILE [3]</th><th>FIBER [3]</th><th>PLATE [3]</th><th>MJD [3]</th><th>LOCID [3]</th><th>JD [3]</th><th>VREL [3]</th><th>VRELERR [3]</th><th>VHELIO [3]</th><th>BC [3]</th><th>BINARY [2]</th><th>STABLERV_CHI2 [2]</th><th>STABLERV_RCHI2 [2]</th><th>CHI2_THRESHOLD [2]</th><th>STABLERV_CHI2_PROB [2]</th><th>TEFF</th><th>LOGG</th><th>FEH</th><th>ALPHA</th><th>CARBON</th><th>CHISQ [3]</th><th>SYNTHVREL [3]</th><th>SYNTHVHELIO [3]</th><th>SYNTHVRELERR [3]</th><th>OBSVREL [3]</th><th>OBSVHELIO [3]</th><th>OBSVRELERR [3]</th><th>CCF [5,401]</th><th>CCFERR [5,401]</th><th>CCFLAG [401]</th><th>CCFW0</th><th>CCFDW</th><th>AUTOCF [401]</th></tr></thead>\n",
-       "<thead><tr><th>bytes30</th><th>int16</th><th>bytes4</th><th>int32</th><th>int16</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int16</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float64</th><th>float64</th><th>float32</th></tr></thead>\n",
-       "<tr><td>apVisit-r8-7957-57165-149.fits .. apVisit-r8-7957-57169-149.fits</td><td>149 .. 149</td><td>7957 .. 7957</td><td>57165 .. 57169</td><td>2000 .. 2000</td><td>2457165.9243 .. 2457169.89428</td><td>-48.441147 .. -44.811405</td><td>0.107161745 .. 0.048990007</td><td>-45.861805 .. -43.27343</td><td>2.5793405 .. 1.5379744</td><td>1 .. 1</td><td>740.5823 .. 1106.2156</td><td>19.24295 .. 23.518244</td><td>13.815598 .. 13.815598</td><td>0.0 .. 0.0</td><td>6250.0</td><td>5.0</td><td>0.5</td><td>0.0</td><td>0.0</td><td>1.5649955 .. 1.703001</td><td>-48.44425 .. -44.79012</td><td>-45.864906 .. -43.252144</td><td>0.102386884 .. 0.037788603</td><td>-48.432682 .. -44.66065</td><td>-45.85334 .. -43.122673</td><td>0.09006365 .. 0.037621994</td><td>-0.019868843 .. -0.052079756</td><td>0.0028110396 .. 0.0034483492</td><td>-200.0 .. 200.0</td><td>15100.801541641493</td><td>5.999999999950489e-06</td><td>-0.04174718 .. -0.04174718</td></tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<Table length=1>\n",
-       "                            FILE [3]                             ...\n",
-       "                            bytes30                              ...\n",
-       "---------------------------------------------------------------- ...\n",
-       "apVisit-r8-7957-57165-149.fits .. apVisit-r8-7957-57169-149.fits ..."
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "No table found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-f157ddbe72a1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mhdu\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfits_dir\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfits_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhdu\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhdu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/astropy/table/table.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(cls, *args, **kwargs)\u001b[0m\n\u001b[1;32m   2529\u001b[0m         \u001b[0mpassed\u001b[0m \u001b[0mthrough\u001b[0m \u001b[0mto\u001b[0m \u001b[0mthe\u001b[0m \u001b[0munderlying\u001b[0m \u001b[0mdata\u001b[0m \u001b[0mreader\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m~\u001b[0m\u001b[0mastropy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mascii\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2530\u001b[0m         \"\"\"\n\u001b[0;32m-> 2531\u001b[0;31m         \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mio_registry\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2532\u001b[0m         \u001b[0;31m# For some readers (e.g., ascii.ecsv), the returned `out` class is not\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2533\u001b[0m         \u001b[0;31m# guaranteed to be the same as the desired output `cls`.  If so,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/astropy/io/registry.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(cls, format, *args, **kwargs)\u001b[0m\n\u001b[1;32m    515\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    516\u001b[0m         \u001b[0mreader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_reader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 517\u001b[0;31m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    518\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    519\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/astropy/io/fits/connect.py\u001b[0m in \u001b[0;36mread_table_fits\u001b[0;34m(input, hdu, astropy_native, memmap, character_as_bytes)\u001b[0m\n\u001b[1;32m    197\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    198\u001b[0m             return read_table_fits(hdulist, hdu=hdu,\n\u001b[0;32m--> 199\u001b[0;31m                                    astropy_native=astropy_native)\n\u001b[0m\u001b[1;32m    200\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    201\u001b[0m             \u001b[0mhdulist\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/astropy/io/fits/connect.py\u001b[0m in \u001b[0;36mread_table_fits\u001b[0;34m(input, hdu, astropy_native, memmap, character_as_bytes)\u001b[0m\n\u001b[1;32m    184\u001b[0m             \u001b[0mtable\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtables\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfirst\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtables\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    185\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 186\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"No table found\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    187\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    188\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mTableHDU\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mBinTableHDU\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGroupsHDU\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: No table found"
+     ]
     }
    ],
    "source": [
-    "hdu = 1\n",
-    "t = Table.read(fits_dir + os.listdir(fits_dir)[0], hdu=hdu) \n",
+    "hdu = 2\n",
+    "t = Table.read(fits_dir + os.listdir(fits_dir)[1], hdu=hdu) \n",
     "t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n",
-      "RA: 341.04164\n",
-      "DEC: 45.214619\n"
+     "ename": "KeyError",
+     "evalue": "\"Keyword 'RA' not found.\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-c0be16675a9b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mheader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mheader\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m#print(header['VRAD'])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'RA: '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mheader\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'RA'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'DEC: '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mheader\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'DEC'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/astropy/io/fits/header.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    143\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    144\u001b[0m             \u001b[0mkeyword\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 145\u001b[0;31m         \u001b[0mcard\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_cards\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_cardindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    146\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcard\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfield_specifier\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mkeyword\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mcard\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrawkeyword\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    147\u001b[0m             \u001b[0;31m# This is RVKC; if only the top-level keyword was specified return\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/astropy/io/fits/header.py\u001b[0m in \u001b[0;36m_cardindex\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1652\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1653\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mindices\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1654\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Keyword {!r} not found.\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkeyword\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1655\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1656\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: \"Keyword 'RA' not found.\""
      ]
     }
    ],
    "source": [
     "#Figure out fits format\n",
     "\n",
-    "with fits.open(fits_dir + os.listdir(fits_dir)[10]) as file:\n",
+    "with fits.open(fits_dir + os.listdir(fits_dir)[0]) as file:\n",
     "    header = file[0].header\n",
-    "    print(header['VRAD'])\n",
+    "    #print(header['VRAD'])\n",
     "    print('RA: ' + str(header['RA']))\n",
     "    print('DEC: ' + str(header['DEC']))\n",
     "    \n",
